Full AttachLayoutTree on a new Document not necessary.

We called AttachLayoutTree on a new Document which just got its
LayoutView created. The new Document should not have any child nodes,
it's not marked initially dirty, but trying to land this change the
first time we caused flakiness for a Window accessibility test.

Instead of the AttachLayoutTree call, do the AXObjectCache update which
would otherwise be called from Node::AttachLayoutTree.

This is a new attempt after the previous got reverted:

https://chromium-review.googlesource.com/c/chromium/src/+/1317889

Bug: 902050
Change-Id: I4e366013549627b54f016d76b3dcbf12ea115f70
Reviewed-on: https://chromium-review.googlesource.com/c/1319610
Reviewed-by: Anders Ruud <andruud@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605657}
Former-commit-id: 18a9ef4599aa9e6cb6fdc27484ac50fcfdda9482