third_party/blink/renderer/core/dom/document.cc
@@ -2744,12 +2744,9 @@ void Document::Initialize() {
   layout_view_->Compositor()->SetNeedsCompositingUpdate(
       kCompositingUpdateAfterCompositingInputChange);
 
-  {
-    ReattachLegacyLayoutObjectList legacy_layout_objects(*this);
-    AttachContext context;
-    ContainerNode::AttachLayoutTree(context);
-    legacy_layout_objects.ForceLegacyLayoutIfNeeded();
-  }
+  DCHECK(!firstChild());
+  if (AXObjectCache* cache = ExistingAXObjectCache())
+    cache->UpdateCacheAfterNodeIsAttached(this);
 
   // The TextAutosizer can't update layout view info while the Document is
   // detached, so update now in case anything changed.
